<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/linearLayout"
            android:layout_gravity="top"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/linearLayout2" android:padding="8dp"
                android:layout_margin="8dp">
            <ImageView
                    android:layout_width="345dp"
                    android:layout_height="100dp" app:srcCompat="@drawable/employee1" android:id="@+id/imageView"
                    android:layout_weight="1" android:contentDescription="@string/imgDes"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="1" android:id="@+id/linearLayout3">
                <TextView
                        android:text="@string/lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/lastNameTextView"
                        android:baselineAligned="false" android:layout_marginTop="20dp"/>
                <TextView
                        android:text="@string/firstname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/firstNameTextView"
                        android:baselineAligned="false"/>
                <TextView
                        android:text="@string/jobtile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/jobTitleTextView"
                        android:baselineAligned="false"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
                android:text="@string/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/infoTextView" android:layout_margin="8dp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="40dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/linearLayout4" android:padding="8dp">
        <TextView
                android:text="@string/_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/onetextView" android:layout_weight="1"
                android:gravity="center_horizontal"
                android:onClick="numberClicked"/>
        <TextView
                android:text="@string/_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/twoTextView" android:layout_weight="1"
                android:gravity="center_horizontal"
                android:onClick="numberClicked"/>
        <TextView
                android:text="@string/_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/threetextView" android:layout_weight="1"
                android:gravity="center_horizontal"
                android:onClick="numberClicked"/>
        <TextView
                android:text="@string/_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/fourtextView" android:layout_weight="1"
                android:gravity="center_horizontal"
                android:onClick="numberClicked"/>
        <TextView
                android:text="@string/_5"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/fivetextView" android:layout_weight="1"
                android:gravity="center_horizontal"
                android:onClick="numberClicked"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>